--- a/public/main.css
+++ b/public/main.css
@@ -1,16 +1,55 @@
 * {
     box-sizing: border-box;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
 }
 
 body {
     height: 100vh;
-    background-color: #D6EAF8 ;
+    background-color: #D6EAF8;
     background-image: url('/images/background.jpeg');
     background-size: cover;
     background-position: center;
+}
+
+button {
+    padding: 10px 20px;
+    border: unset;
+    border-radius: 20px;
+    color: #2874A6;
+    z-index: 1;
+    background: #e8e8e8;
+    position: relative;
+    font-weight: 1000;
+    font-size: 14px;
+    -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    transition: all 250ms;
+    overflow: hidden;
+}
+
+button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    border-radius: 10px;
+    background-color: #2874A6;
+    z-index: -1;
+    -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    transition: all 250ms
+}
+
+button:hover {
+    color: #e8e8e8;
+}
+
+button:hover::before {
+    width: 100%;
 }
 
 li {
@@ -39,7 +78,7 @@ header {
 
 .navbar {
     width: 100%;
-    height: 60px;
+    height: 50px;
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
@@ -66,7 +105,7 @@ header {
 }
 
 .action_button {
-    background-color: #2874A6 ;
+    background-color: #2874A6;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
@@ -95,7 +134,7 @@ header {
 }
 
 header {
-    background-color: #333;
+    background-color: #1A5276;
     color: white;
     display: flex;
     justify-content: center;
@@ -230,7 +269,7 @@ footer li a {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -249,5 +288,3 @@ footer li a {
 .dropdown-content button:hover {
     background-color: #ddd;
 }
-
-
